--- a/the_weather/weather/templates/weather/weather.html
+++ b/the_weather/weather/templates/weather/weather.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="columns">
                 <div class="column is-offset-4 is-4">
-                    {% for city in weather_data %}
+                    {% for city_weather in weather_data %}
                     <div class="box">
                         <article class="media">
                             <div class="media-left">
